# compass

./: .gitignore  CMakeLists.txt  README.md
Compass/: Algebraic.hpp  Core.hpp  Geometric.hpp  Specialized.hpp  main.cpp
Compass/src/Algebraic/: ChernovHoussam.hpp  ChernovLesort.hpp  GanderGolubStrebel.hpp  Hyper.hpp  Kasa.hpp  KukushMarkovskyHuffel.hpp  Nievergelt.hpp  Pratt.hpp  Taubin.hpp
Compass/src/Core/: AlgebraicBase.hpp  FitBase.hpp  ForwardDeclarations.hpp  GeometricBase.hpp  SpecializedBase.hpp  StaticAssert.hpp  circle.hpp  fit.hpp
Compass/src/Geometric/: Landau.hpp  LevenbergMarquardt.hpp  Spath.hpp  Trust.hpp
Compass/src/Specialized/: Inversion.hpp  Riemann.hpp
Compass/src/Util/: data.hpp  util.hpp
cmake/: compassConfig.cmake.in
src/: CMakeLists.txt  circle.hpp  data.hpp  fit.hpp  main.cpp  util.hpp
src/fit/: ChernovLesort.hpp  CherovLesort.hpp  GanderGolubStrebel.hpp  Hyper.hpp  Inversion.hpp  Kasa.hpp  KukushMarkovskyHuffel.hpp  Landau.hpp  LevenbergMarquardt.hpp  Nievergelt.hpp  Pratt.hpp  Riemann.hpp  Spath.hpp  Taubin.hpp
